# QuizPal

./: .gitignore  Cargo.toml  README.md  database.db
.github/workflows/: rust.yml
src/: constants.rs  db.rs  main.rs  parsers.rs  requests.rs  types.rs  utils.rs
