[package]
name = "quiz_pal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = "0.12.23"
serde_json = "1.0.145"
serde = "1.0.227"
toml = "0.9.7"
thiserror = "2.0.16"
sqlite = "0.37.0"
chrono = "0.4.42"
once_cell = "1.21.3"
